<resources>
    <string name="app_name">sportstat</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="player_name">Player Name</string>
    <string name="player_e_mail">Player E-mail</string>
    <string name="player_phone_number">Player Phone Number</string>
    <string name="create_player">Create Player</string>
    <string name="the_name_of_the_player">The Name of the Player</string>
    <string name="position_of_the_player">Position of the player</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="add_team_logo">Add team logo</string>
    <string name="team_name">Team Name</string>
    <string name="create_team">Create Team</string>
    <string-array name="player_roles">
        <item>front</item>
        <item>middle</item>
        <item>back</item>
    </string-array>
</resources>