<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="@dimen/logo_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/left_padding_within_editText"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/left_padding_within_editText"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/left_padding_within_editText"
        android:textColorHint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/left_padding_within_editText"
        android:textColorHint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>