<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="@dimen/logo_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/left_padding_within_editText"
        android:drawableStart="@drawable/ic_action_user"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_action_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        android:hint="@string/password"
        android:textColorHint="@color/textColor"
        android:paddingStart="@dimen/left_padding_within_editText"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="@color/buttonColor"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCardView" />
</androidx.constraintlayout.widget.ConstraintLayout>